--- a/TagWithIssues/config/locales/en.yml
+++ b/TagWithIssues/config/locales/en.yml
@@ -24,3 +24,4 @@ en:
   error_tag_name_already_in_use: "This tag name is already in use"
   error_adding_tag_to_custom_field: "The tag was created successfully but I could not add it to the following tickets: "
   error_could_not_find_tag_field: "The tag was created successfully but I could not find the configured custom field to add tags to issues"
+  error_in_hook:  "The tag was created successfully but a hook failed for the following tickets: "
