fixes #813: validate tag names with regular expression

--- a/TagWithIssues/config/locales/en.yml
+++ b/TagWithIssues/config/locales/en.yml
@@ -15,13 +15,16 @@ en:
   label_internal_version_extra_short: "Extra"
   label_choose_custom_tag_name: "Choose custom tag name"
   label_existing_tags: "Existing tags"
-  label_tag_command: "Tag command (use placeholders <repository_path>, <tag_name> and <commit_id> as needed)"
+  label_tag_command: "Tag command (use placeholders &lt;repository_path&gt;, &lt;tag_name&gt; and &lt;commit_id&gt; as needed)"
   label_tag_field_name: "Custom Field name for tags (should use the custom field format 'Tags')"
   label_tags: "Tags"
+  label_tag_validate_regexp: "Regular expression to validate all tag names"
   notice_successfully_created_tag: "Successfully created tag"
   error_creating_tag: "Could not create tag"
   error_tag_name_insufficient: "Must supply at least a major and minor version or a custom tag name"
   error_tag_name_already_in_use: "This tag name is already in use"
+  error_tag_name_validation: "The tag name does not match the regular expression configured for its validation"
   error_adding_tag_to_custom_field: "The tag was created successfully but I could not add it to the following tickets: "
   error_could_not_find_tag_field: "The tag was created successfully but I could not find the configured custom field to add tags to issues"
   error_in_hook:  "The tag was created successfully but a hook failed for the following tickets: "
+  error_invalid_regexp: "Invalid regular expression in plugin configuration"
